// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`'buildLinuxKubernetesCommand' > should generate basic command with minimal configuration 1`] = `"curl https://downloads.portainer.io/ee2-19/portainer-edge-agent-setup.sh | bash -s -- "test-edge-id" "test-edge-key" "0" "test-secret" """`;

exports[`'buildLinuxKubernetesCommand' > should generate command with all meta variables 1`] = `"curl https://downloads.portainer.io/ee2-19/portainer-edge-agent-setup.sh | bash -s -- "test-edge-id" "test-edge-key" "0" "test-secret" "EDGE_GROUPS=1:2,PORTAINER_GROUP=5,PORTAINER_TAGS=10:20""`;

exports[`'buildLinuxKubernetesCommand' > should generate command with async mode enabled 1`] = `"curl https://downloads.portainer.io/ee2-19/portainer-edge-agent-setup.sh | bash -s -- "test-edge-id" "test-edge-key" "0" "test-secret" "EDGE_ASYNC=1""`;

exports[`'buildLinuxKubernetesCommand' > should generate command with custom environment variables 1`] = `"curl https://downloads.portainer.io/ee2-19/portainer-edge-agent-setup.sh | bash -s -- "test-edge-id" "test-edge-key" "0" "test-secret" "MY_VAR=value1,ANOTHER_VAR=value2""`;

exports[`'buildLinuxKubernetesCommand' > should generate command with edge ID generator 1`] = `
"PORTAINER_EDGE_ID=$(uuidgen) 

curl https://downloads.portainer.io/ee2-19/portainer-edge-agent-setup.sh | bash -s -- "$PORTAINER_EDGE_ID" "test-edge-key" "0" "test-secret" """
`;

exports[`'buildLinuxKubernetesCommand' > should generate command with edge groups 1`] = `"curl https://downloads.portainer.io/ee2-19/portainer-edge-agent-setup.sh | bash -s -- "test-edge-id" "test-edge-key" "0" "test-secret" "EDGE_GROUPS=1:2:3""`;

exports[`'buildLinuxKubernetesCommand' > should generate command with empty agent secret 1`] = `"curl https://downloads.portainer.io/ee2-19/portainer-edge-agent-setup.sh | bash -s -- "test-edge-id" "test-edge-key" "0" "" """`;

exports[`'buildLinuxKubernetesCommand' > should generate command with portainer group 1`] = `"curl https://downloads.portainer.io/ee2-19/portainer-edge-agent-setup.sh | bash -s -- "test-edge-id" "test-edge-key" "0" "test-secret" "PORTAINER_GROUP=5""`;

exports[`'buildLinuxKubernetesCommand' > should generate command with self-signed certificates allowed 1`] = `"curl https://downloads.portainer.io/ee2-19/portainer-edge-agent-setup.sh | bash -s -- "test-edge-id" "test-edge-key" "1" "test-secret" """`;

exports[`'buildLinuxKubernetesCommand' > should generate command with tags 1`] = `"curl https://downloads.portainer.io/ee2-19/portainer-edge-agent-setup.sh | bash -s -- "test-edge-id" "test-edge-key" "0" "test-secret" "PORTAINER_TAGS=10:20:30""`;

exports[`'buildLinuxKubernetesCommand' > should generate command without agent secret 1`] = `"curl https://downloads.portainer.io/ee2-19/portainer-edge-agent-setup.sh | bash -s -- "test-edge-id" "test-edge-key" "0" "undefined" """`;

exports[`'buildLinuxPodmanCommand' > should generate basic command with minimal configuration 1`] = `
"sudo podman volume create portainer_agent_data

sudo podman run -d \\
  -v /run/podman/podman.sock:/var/run/docker.sock \\
  -v /var/lib/containers/storage/volumes:/var/lib/docker/volumes \\
  -v /:/host \\
  -v portainer_agent_data:/data \\
  --restart always \\
  --privileged \\
  -e EDGE=1 \\
  -e EDGE_ID=test-edge-id \\
  -e EDGE_KEY=test-edge-key \\
  -e EDGE_INSECURE_POLL=0 \\
  -e AGENT_SECRET=test-secret \\
  -e PODMAN=1 \\
  --name portainer_edge_agent \\
  docker.io/portainer/agent:2.19.0
  "
`;

exports[`'buildLinuxPodmanCommand' > should generate command with all meta variables 1`] = `
"sudo podman volume create portainer_agent_data

sudo podman run -d \\
  -v /run/podman/podman.sock:/var/run/docker.sock \\
  -v /var/lib/containers/storage/volumes:/var/lib/docker/volumes \\
  -v /:/host \\
  -v portainer_agent_data:/data \\
  --restart always \\
  --privileged \\
  -e EDGE=1 \\
  -e EDGE_ID=test-edge-id \\
  -e EDGE_KEY=test-edge-key \\
  -e EDGE_INSECURE_POLL=0 \\
  -e AGENT_SECRET=test-secret \\
  -e PODMAN=1 \\
  -e EDGE_GROUPS=1:2 \\
  -e PORTAINER_GROUP=5 \\
  -e PORTAINER_TAGS=10:20 \\
  --name portainer_edge_agent \\
  docker.io/portainer/agent:2.19.0
  "
`;

exports[`'buildLinuxPodmanCommand' > should generate command with async mode enabled 1`] = `
"sudo podman volume create portainer_agent_data

sudo podman run -d \\
  -v /run/podman/podman.sock:/var/run/docker.sock \\
  -v /var/lib/containers/storage/volumes:/var/lib/docker/volumes \\
  -v /:/host \\
  -v portainer_agent_data:/data \\
  --restart always \\
  --privileged \\
  -e EDGE=1 \\
  -e EDGE_ID=test-edge-id \\
  -e EDGE_KEY=test-edge-key \\
  -e EDGE_INSECURE_POLL=0 \\
  -e AGENT_SECRET=test-secret \\
  -e EDGE_ASYNC=1 \\
  -e PODMAN=1 \\
  --name portainer_edge_agent \\
  docker.io/portainer/agent:2.19.0
  "
`;

exports[`'buildLinuxPodmanCommand' > should generate command with custom environment variables 1`] = `
"sudo podman volume create portainer_agent_data

sudo podman run -d \\
  -v /run/podman/podman.sock:/var/run/docker.sock \\
  -v /var/lib/containers/storage/volumes:/var/lib/docker/volumes \\
  -v /:/host \\
  -v portainer_agent_data:/data \\
  --restart always \\
  --privileged \\
  -e EDGE=1 \\
  -e EDGE_ID=test-edge-id \\
  -e EDGE_KEY=test-edge-key \\
  -e EDGE_INSECURE_POLL=0 \\
  -e AGENT_SECRET=test-secret \\
  -e PODMAN=1 \\
  -e MY_VAR=value1 \\
  -e ANOTHER_VAR=value2 \\
  --name portainer_edge_agent \\
  docker.io/portainer/agent:2.19.0
  "
`;

exports[`'buildLinuxPodmanCommand' > should generate command with edge ID generator 1`] = `
"PORTAINER_EDGE_ID=$(uuidgen) 

sudo podman volume create portainer_agent_data

sudo podman run -d \\
  -v /run/podman/podman.sock:/var/run/docker.sock \\
  -v /var/lib/containers/storage/volumes:/var/lib/docker/volumes \\
  -v /:/host \\
  -v portainer_agent_data:/data \\
  --restart always \\
  --privileged \\
  -e EDGE=1 \\
  -e EDGE_ID=$PORTAINER_EDGE_ID \\
  -e EDGE_KEY=test-edge-key \\
  -e EDGE_INSECURE_POLL=0 \\
  -e AGENT_SECRET=test-secret \\
  -e PODMAN=1 \\
  --name portainer_edge_agent \\
  docker.io/portainer/agent:2.19.0
  "
`;

exports[`'buildLinuxPodmanCommand' > should generate command with edge groups 1`] = `
"sudo podman volume create portainer_agent_data

sudo podman run -d \\
  -v /run/podman/podman.sock:/var/run/docker.sock \\
  -v /var/lib/containers/storage/volumes:/var/lib/docker/volumes \\
  -v /:/host \\
  -v portainer_agent_data:/data \\
  --restart always \\
  --privileged \\
  -e EDGE=1 \\
  -e EDGE_ID=test-edge-id \\
  -e EDGE_KEY=test-edge-key \\
  -e EDGE_INSECURE_POLL=0 \\
  -e AGENT_SECRET=test-secret \\
  -e PODMAN=1 \\
  -e EDGE_GROUPS=1:2:3 \\
  --name portainer_edge_agent \\
  docker.io/portainer/agent:2.19.0
  "
`;

exports[`'buildLinuxPodmanCommand' > should generate command with empty agent secret 1`] = `
"sudo podman volume create portainer_agent_data

sudo podman run -d \\
  -v /run/podman/podman.sock:/var/run/docker.sock \\
  -v /var/lib/containers/storage/volumes:/var/lib/docker/volumes \\
  -v /:/host \\
  -v portainer_agent_data:/data \\
  --restart always \\
  --privileged \\
  -e EDGE=1 \\
  -e EDGE_ID=test-edge-id \\
  -e EDGE_KEY=test-edge-key \\
  -e EDGE_INSECURE_POLL=0 \\
  -e PODMAN=1 \\
  --name portainer_edge_agent \\
  docker.io/portainer/agent:2.19.0
  "
`;

exports[`'buildLinuxPodmanCommand' > should generate command with portainer group 1`] = `
"sudo podman volume create portainer_agent_data

sudo podman run -d \\
  -v /run/podman/podman.sock:/var/run/docker.sock \\
  -v /var/lib/containers/storage/volumes:/var/lib/docker/volumes \\
  -v /:/host \\
  -v portainer_agent_data:/data \\
  --restart always \\
  --privileged \\
  -e EDGE=1 \\
  -e EDGE_ID=test-edge-id \\
  -e EDGE_KEY=test-edge-key \\
  -e EDGE_INSECURE_POLL=0 \\
  -e AGENT_SECRET=test-secret \\
  -e PODMAN=1 \\
  -e PORTAINER_GROUP=5 \\
  --name portainer_edge_agent \\
  docker.io/portainer/agent:2.19.0
  "
`;

exports[`'buildLinuxPodmanCommand' > should generate command with self-signed certificates allowed 1`] = `
"sudo podman volume create portainer_agent_data

sudo podman run -d \\
  -v /run/podman/podman.sock:/var/run/docker.sock \\
  -v /var/lib/containers/storage/volumes:/var/lib/docker/volumes \\
  -v /:/host \\
  -v portainer_agent_data:/data \\
  --restart always \\
  --privileged \\
  -e EDGE=1 \\
  -e EDGE_ID=test-edge-id \\
  -e EDGE_KEY=test-edge-key \\
  -e EDGE_INSECURE_POLL=1 \\
  -e AGENT_SECRET=test-secret \\
  -e PODMAN=1 \\
  --name portainer_edge_agent \\
  docker.io/portainer/agent:2.19.0
  "
`;

exports[`'buildLinuxPodmanCommand' > should generate command with tags 1`] = `
"sudo podman volume create portainer_agent_data

sudo podman run -d \\
  -v /run/podman/podman.sock:/var/run/docker.sock \\
  -v /var/lib/containers/storage/volumes:/var/lib/docker/volumes \\
  -v /:/host \\
  -v portainer_agent_data:/data \\
  --restart always \\
  --privileged \\
  -e EDGE=1 \\
  -e EDGE_ID=test-edge-id \\
  -e EDGE_KEY=test-edge-key \\
  -e EDGE_INSECURE_POLL=0 \\
  -e AGENT_SECRET=test-secret \\
  -e PODMAN=1 \\
  -e PORTAINER_TAGS=10:20:30 \\
  --name portainer_edge_agent \\
  docker.io/portainer/agent:2.19.0
  "
`;

exports[`'buildLinuxPodmanCommand' > should generate command without agent secret 1`] = `
"sudo podman volume create portainer_agent_data

sudo podman run -d \\
  -v /run/podman/podman.sock:/var/run/docker.sock \\
  -v /var/lib/containers/storage/volumes:/var/lib/docker/volumes \\
  -v /:/host \\
  -v portainer_agent_data:/data \\
  --restart always \\
  --privileged \\
  -e EDGE=1 \\
  -e EDGE_ID=test-edge-id \\
  -e EDGE_KEY=test-edge-key \\
  -e EDGE_INSECURE_POLL=0 \\
  -e PODMAN=1 \\
  --name portainer_edge_agent \\
  docker.io/portainer/agent:2.19.0
  "
`;

exports[`'buildLinuxStandaloneCommand' > should generate basic command with minimal configuration 1`] = `
"docker run -d \\
  -v /var/run/docker.sock:/var/run/docker.sock \\
  -v /var/lib/docker/volumes:/var/lib/docker/volumes \\
  -v /:/host \\
  -v portainer_agent_data:/data \\
  --restart always \\
  -e EDGE=1 \\
  -e EDGE_ID=test-edge-id \\
  -e EDGE_KEY=test-edge-key \\
  -e EDGE_INSECURE_POLL=0 \\
  -e AGENT_SECRET=test-secret \\
  --name portainer_edge_agent \\
  portainer/agent:2.19.0
  "
`;

exports[`'buildLinuxStandaloneCommand' > should generate command with all meta variables 1`] = `
"docker run -d \\
  -v /var/run/docker.sock:/var/run/docker.sock \\
  -v /var/lib/docker/volumes:/var/lib/docker/volumes \\
  -v /:/host \\
  -v portainer_agent_data:/data \\
  --restart always \\
  -e EDGE=1 \\
  -e EDGE_ID=test-edge-id \\
  -e EDGE_KEY=test-edge-key \\
  -e EDGE_INSECURE_POLL=0 \\
  -e AGENT_SECRET=test-secret \\
  -e EDGE_GROUPS=1:2 \\
  -e PORTAINER_GROUP=5 \\
  -e PORTAINER_TAGS=10:20 \\
  --name portainer_edge_agent \\
  portainer/agent:2.19.0
  "
`;

exports[`'buildLinuxStandaloneCommand' > should generate command with async mode enabled 1`] = `
"docker run -d \\
  -v /var/run/docker.sock:/var/run/docker.sock \\
  -v /var/lib/docker/volumes:/var/lib/docker/volumes \\
  -v /:/host \\
  -v portainer_agent_data:/data \\
  --restart always \\
  -e EDGE=1 \\
  -e EDGE_ID=test-edge-id \\
  -e EDGE_KEY=test-edge-key \\
  -e EDGE_INSECURE_POLL=0 \\
  -e AGENT_SECRET=test-secret \\
  -e EDGE_ASYNC=1 \\
  --name portainer_edge_agent \\
  portainer/agent:2.19.0
  "
`;

exports[`'buildLinuxStandaloneCommand' > should generate command with custom environment variables 1`] = `
"docker run -d \\
  -v /var/run/docker.sock:/var/run/docker.sock \\
  -v /var/lib/docker/volumes:/var/lib/docker/volumes \\
  -v /:/host \\
  -v portainer_agent_data:/data \\
  --restart always \\
  -e EDGE=1 \\
  -e EDGE_ID=test-edge-id \\
  -e EDGE_KEY=test-edge-key \\
  -e EDGE_INSECURE_POLL=0 \\
  -e AGENT_SECRET=test-secret \\
  -e MY_VAR=value1 \\
  -e ANOTHER_VAR=value2 \\
  --name portainer_edge_agent \\
  portainer/agent:2.19.0
  "
`;

exports[`'buildLinuxStandaloneCommand' > should generate command with edge ID generator 1`] = `
"PORTAINER_EDGE_ID=$(uuidgen) 

docker run -d \\
  -v /var/run/docker.sock:/var/run/docker.sock \\
  -v /var/lib/docker/volumes:/var/lib/docker/volumes \\
  -v /:/host \\
  -v portainer_agent_data:/data \\
  --restart always \\
  -e EDGE=1 \\
  -e EDGE_ID=$PORTAINER_EDGE_ID \\
  -e EDGE_KEY=test-edge-key \\
  -e EDGE_INSECURE_POLL=0 \\
  -e AGENT_SECRET=test-secret \\
  --name portainer_edge_agent \\
  portainer/agent:2.19.0
  "
`;

exports[`'buildLinuxStandaloneCommand' > should generate command with edge groups 1`] = `
"docker run -d \\
  -v /var/run/docker.sock:/var/run/docker.sock \\
  -v /var/lib/docker/volumes:/var/lib/docker/volumes \\
  -v /:/host \\
  -v portainer_agent_data:/data \\
  --restart always \\
  -e EDGE=1 \\
  -e EDGE_ID=test-edge-id \\
  -e EDGE_KEY=test-edge-key \\
  -e EDGE_INSECURE_POLL=0 \\
  -e AGENT_SECRET=test-secret \\
  -e EDGE_GROUPS=1:2:3 \\
  --name portainer_edge_agent \\
  portainer/agent:2.19.0
  "
`;

exports[`'buildLinuxStandaloneCommand' > should generate command with empty agent secret 1`] = `
"docker run -d \\
  -v /var/run/docker.sock:/var/run/docker.sock \\
  -v /var/lib/docker/volumes:/var/lib/docker/volumes \\
  -v /:/host \\
  -v portainer_agent_data:/data \\
  --restart always \\
  -e EDGE=1 \\
  -e EDGE_ID=test-edge-id \\
  -e EDGE_KEY=test-edge-key \\
  -e EDGE_INSECURE_POLL=0 \\
  --name portainer_edge_agent \\
  portainer/agent:2.19.0
  "
`;

exports[`'buildLinuxStandaloneCommand' > should generate command with portainer group 1`] = `
"docker run -d \\
  -v /var/run/docker.sock:/var/run/docker.sock \\
  -v /var/lib/docker/volumes:/var/lib/docker/volumes \\
  -v /:/host \\
  -v portainer_agent_data:/data \\
  --restart always \\
  -e EDGE=1 \\
  -e EDGE_ID=test-edge-id \\
  -e EDGE_KEY=test-edge-key \\
  -e EDGE_INSECURE_POLL=0 \\
  -e AGENT_SECRET=test-secret \\
  -e PORTAINER_GROUP=5 \\
  --name portainer_edge_agent \\
  portainer/agent:2.19.0
  "
`;

exports[`'buildLinuxStandaloneCommand' > should generate command with self-signed certificates allowed 1`] = `
"docker run -d \\
  -v /var/run/docker.sock:/var/run/docker.sock \\
  -v /var/lib/docker/volumes:/var/lib/docker/volumes \\
  -v /:/host \\
  -v portainer_agent_data:/data \\
  --restart always \\
  -e EDGE=1 \\
  -e EDGE_ID=test-edge-id \\
  -e EDGE_KEY=test-edge-key \\
  -e EDGE_INSECURE_POLL=1 \\
  -e AGENT_SECRET=test-secret \\
  --name portainer_edge_agent \\
  portainer/agent:2.19.0
  "
`;

exports[`'buildLinuxStandaloneCommand' > should generate command with tags 1`] = `
"docker run -d \\
  -v /var/run/docker.sock:/var/run/docker.sock \\
  -v /var/lib/docker/volumes:/var/lib/docker/volumes \\
  -v /:/host \\
  -v portainer_agent_data:/data \\
  --restart always \\
  -e EDGE=1 \\
  -e EDGE_ID=test-edge-id \\
  -e EDGE_KEY=test-edge-key \\
  -e EDGE_INSECURE_POLL=0 \\
  -e AGENT_SECRET=test-secret \\
  -e PORTAINER_TAGS=10:20:30 \\
  --name portainer_edge_agent \\
  portainer/agent:2.19.0
  "
`;

exports[`'buildLinuxStandaloneCommand' > should generate command without agent secret 1`] = `
"docker run -d \\
  -v /var/run/docker.sock:/var/run/docker.sock \\
  -v /var/lib/docker/volumes:/var/lib/docker/volumes \\
  -v /:/host \\
  -v portainer_agent_data:/data \\
  --restart always \\
  -e EDGE=1 \\
  -e EDGE_ID=test-edge-id \\
  -e EDGE_KEY=test-edge-key \\
  -e EDGE_INSECURE_POLL=0 \\
  --name portainer_edge_agent \\
  portainer/agent:2.19.0
  "
`;

exports[`'buildLinuxSwarmCommand' > should generate basic command with minimal configuration 1`] = `
"docker network create \\
  --driver overlay \\
  portainer_agent_network;

docker service create \\
  --name portainer_edge_agent \\
  --network portainer_agent_network \\
  -e EDGE=1 \\
  -e EDGE_ID=test-edge-id \\
  -e EDGE_KEY=test-edge-key \\
  -e EDGE_INSECURE_POLL=0 \\
  -e AGENT_SECRET=test-secret \\
  -e AGENT_CLUSTER_ADDR=tasks.portainer_edge_agent \\
  --mode global \\
  --constraint 'node.platform.os == linux' \\
  --mount type=bind,src=//var/run/docker.sock,dst=/var/run/docker.sock \\
  --mount type=bind,src=//var/lib/docker/volumes,dst=/var/lib/docker/volumes \\
  --mount type=bind,src=//,dst=/host \\
  --mount type=volume,src=portainer_agent_data,dst=/data \\
  portainer/agent:2.19.0
"
`;

exports[`'buildLinuxSwarmCommand' > should generate command with all meta variables 1`] = `
"docker network create \\
  --driver overlay \\
  portainer_agent_network;

docker service create \\
  --name portainer_edge_agent \\
  --network portainer_agent_network \\
  -e EDGE=1 \\
  -e EDGE_ID=test-edge-id \\
  -e EDGE_KEY=test-edge-key \\
  -e EDGE_INSECURE_POLL=0 \\
  -e AGENT_SECRET=test-secret \\
  -e AGENT_CLUSTER_ADDR=tasks.portainer_edge_agent \\
  -e EDGE_GROUPS=1:2 \\
  -e PORTAINER_GROUP=5 \\
  -e PORTAINER_TAGS=10:20 \\
  --mode global \\
  --constraint 'node.platform.os == linux' \\
  --mount type=bind,src=//var/run/docker.sock,dst=/var/run/docker.sock \\
  --mount type=bind,src=//var/lib/docker/volumes,dst=/var/lib/docker/volumes \\
  --mount type=bind,src=//,dst=/host \\
  --mount type=volume,src=portainer_agent_data,dst=/data \\
  portainer/agent:2.19.0
"
`;

exports[`'buildLinuxSwarmCommand' > should generate command with async mode enabled 1`] = `
"docker network create \\
  --driver overlay \\
  portainer_agent_network;

docker service create \\
  --name portainer_edge_agent \\
  --network portainer_agent_network \\
  -e EDGE=1 \\
  -e EDGE_ID=test-edge-id \\
  -e EDGE_KEY=test-edge-key \\
  -e EDGE_INSECURE_POLL=0 \\
  -e AGENT_SECRET=test-secret \\
  -e EDGE_ASYNC=1 \\
  -e AGENT_CLUSTER_ADDR=tasks.portainer_edge_agent \\
  --mode global \\
  --constraint 'node.platform.os == linux' \\
  --mount type=bind,src=//var/run/docker.sock,dst=/var/run/docker.sock \\
  --mount type=bind,src=//var/lib/docker/volumes,dst=/var/lib/docker/volumes \\
  --mount type=bind,src=//,dst=/host \\
  --mount type=volume,src=portainer_agent_data,dst=/data \\
  portainer/agent:2.19.0
"
`;

exports[`'buildLinuxSwarmCommand' > should generate command with custom environment variables 1`] = `
"docker network create \\
  --driver overlay \\
  portainer_agent_network;

docker service create \\
  --name portainer_edge_agent \\
  --network portainer_agent_network \\
  -e EDGE=1 \\
  -e EDGE_ID=test-edge-id \\
  -e EDGE_KEY=test-edge-key \\
  -e EDGE_INSECURE_POLL=0 \\
  -e AGENT_SECRET=test-secret \\
  -e AGENT_CLUSTER_ADDR=tasks.portainer_edge_agent \\
  -e MY_VAR=value1 \\
  -e ANOTHER_VAR=value2 \\
  --mode global \\
  --constraint 'node.platform.os == linux' \\
  --mount type=bind,src=//var/run/docker.sock,dst=/var/run/docker.sock \\
  --mount type=bind,src=//var/lib/docker/volumes,dst=/var/lib/docker/volumes \\
  --mount type=bind,src=//,dst=/host \\
  --mount type=volume,src=portainer_agent_data,dst=/data \\
  portainer/agent:2.19.0
"
`;

exports[`'buildLinuxSwarmCommand' > should generate command with edge ID generator 1`] = `
"PORTAINER_EDGE_ID=$(uuidgen) 

docker network create \\
  --driver overlay \\
  portainer_agent_network;

docker service create \\
  --name portainer_edge_agent \\
  --network portainer_agent_network \\
  -e EDGE=1 \\
  -e EDGE_ID=$PORTAINER_EDGE_ID \\
  -e EDGE_KEY=test-edge-key \\
  -e EDGE_INSECURE_POLL=0 \\
  -e AGENT_SECRET=test-secret \\
  -e AGENT_CLUSTER_ADDR=tasks.portainer_edge_agent \\
  --mode global \\
  --constraint 'node.platform.os == linux' \\
  --mount type=bind,src=//var/run/docker.sock,dst=/var/run/docker.sock \\
  --mount type=bind,src=//var/lib/docker/volumes,dst=/var/lib/docker/volumes \\
  --mount type=bind,src=//,dst=/host \\
  --mount type=volume,src=portainer_agent_data,dst=/data \\
  portainer/agent:2.19.0
"
`;

exports[`'buildLinuxSwarmCommand' > should generate command with edge groups 1`] = `
"docker network create \\
  --driver overlay \\
  portainer_agent_network;

docker service create \\
  --name portainer_edge_agent \\
  --network portainer_agent_network \\
  -e EDGE=1 \\
  -e EDGE_ID=test-edge-id \\
  -e EDGE_KEY=test-edge-key \\
  -e EDGE_INSECURE_POLL=0 \\
  -e AGENT_SECRET=test-secret \\
  -e AGENT_CLUSTER_ADDR=tasks.portainer_edge_agent \\
  -e EDGE_GROUPS=1:2:3 \\
  --mode global \\
  --constraint 'node.platform.os == linux' \\
  --mount type=bind,src=//var/run/docker.sock,dst=/var/run/docker.sock \\
  --mount type=bind,src=//var/lib/docker/volumes,dst=/var/lib/docker/volumes \\
  --mount type=bind,src=//,dst=/host \\
  --mount type=volume,src=portainer_agent_data,dst=/data \\
  portainer/agent:2.19.0
"
`;

exports[`'buildLinuxSwarmCommand' > should generate command with empty agent secret 1`] = `
"docker network create \\
  --driver overlay \\
  portainer_agent_network;

docker service create \\
  --name portainer_edge_agent \\
  --network portainer_agent_network \\
  -e EDGE=1 \\
  -e EDGE_ID=test-edge-id \\
  -e EDGE_KEY=test-edge-key \\
  -e EDGE_INSECURE_POLL=0 \\
  -e AGENT_CLUSTER_ADDR=tasks.portainer_edge_agent \\
  --mode global \\
  --constraint 'node.platform.os == linux' \\
  --mount type=bind,src=//var/run/docker.sock,dst=/var/run/docker.sock \\
  --mount type=bind,src=//var/lib/docker/volumes,dst=/var/lib/docker/volumes \\
  --mount type=bind,src=//,dst=/host \\
  --mount type=volume,src=portainer_agent_data,dst=/data \\
  portainer/agent:2.19.0
"
`;

exports[`'buildLinuxSwarmCommand' > should generate command with portainer group 1`] = `
"docker network create \\
  --driver overlay \\
  portainer_agent_network;

docker service create \\
  --name portainer_edge_agent \\
  --network portainer_agent_network \\
  -e EDGE=1 \\
  -e EDGE_ID=test-edge-id \\
  -e EDGE_KEY=test-edge-key \\
  -e EDGE_INSECURE_POLL=0 \\
  -e AGENT_SECRET=test-secret \\
  -e AGENT_CLUSTER_ADDR=tasks.portainer_edge_agent \\
  -e PORTAINER_GROUP=5 \\
  --mode global \\
  --constraint 'node.platform.os == linux' \\
  --mount type=bind,src=//var/run/docker.sock,dst=/var/run/docker.sock \\
  --mount type=bind,src=//var/lib/docker/volumes,dst=/var/lib/docker/volumes \\
  --mount type=bind,src=//,dst=/host \\
  --mount type=volume,src=portainer_agent_data,dst=/data \\
  portainer/agent:2.19.0
"
`;

exports[`'buildLinuxSwarmCommand' > should generate command with self-signed certificates allowed 1`] = `
"docker network create \\
  --driver overlay \\
  portainer_agent_network;

docker service create \\
  --name portainer_edge_agent \\
  --network portainer_agent_network \\
  -e EDGE=1 \\
  -e EDGE_ID=test-edge-id \\
  -e EDGE_KEY=test-edge-key \\
  -e EDGE_INSECURE_POLL=1 \\
  -e AGENT_SECRET=test-secret \\
  -e AGENT_CLUSTER_ADDR=tasks.portainer_edge_agent \\
  --mode global \\
  --constraint 'node.platform.os == linux' \\
  --mount type=bind,src=//var/run/docker.sock,dst=/var/run/docker.sock \\
  --mount type=bind,src=//var/lib/docker/volumes,dst=/var/lib/docker/volumes \\
  --mount type=bind,src=//,dst=/host \\
  --mount type=volume,src=portainer_agent_data,dst=/data \\
  portainer/agent:2.19.0
"
`;

exports[`'buildLinuxSwarmCommand' > should generate command with tags 1`] = `
"docker network create \\
  --driver overlay \\
  portainer_agent_network;

docker service create \\
  --name portainer_edge_agent \\
  --network portainer_agent_network \\
  -e EDGE=1 \\
  -e EDGE_ID=test-edge-id \\
  -e EDGE_KEY=test-edge-key \\
  -e EDGE_INSECURE_POLL=0 \\
  -e AGENT_SECRET=test-secret \\
  -e AGENT_CLUSTER_ADDR=tasks.portainer_edge_agent \\
  -e PORTAINER_TAGS=10:20:30 \\
  --mode global \\
  --constraint 'node.platform.os == linux' \\
  --mount type=bind,src=//var/run/docker.sock,dst=/var/run/docker.sock \\
  --mount type=bind,src=//var/lib/docker/volumes,dst=/var/lib/docker/volumes \\
  --mount type=bind,src=//,dst=/host \\
  --mount type=volume,src=portainer_agent_data,dst=/data \\
  portainer/agent:2.19.0
"
`;

exports[`'buildLinuxSwarmCommand' > should generate command without agent secret 1`] = `
"docker network create \\
  --driver overlay \\
  portainer_agent_network;

docker service create \\
  --name portainer_edge_agent \\
  --network portainer_agent_network \\
  -e EDGE=1 \\
  -e EDGE_ID=test-edge-id \\
  -e EDGE_KEY=test-edge-key \\
  -e EDGE_INSECURE_POLL=0 \\
  -e AGENT_CLUSTER_ADDR=tasks.portainer_edge_agent \\
  --mode global \\
  --constraint 'node.platform.os == linux' \\
  --mount type=bind,src=//var/run/docker.sock,dst=/var/run/docker.sock \\
  --mount type=bind,src=//var/lib/docker/volumes,dst=/var/lib/docker/volumes \\
  --mount type=bind,src=//,dst=/host \\
  --mount type=volume,src=portainer_agent_data,dst=/data \\
  portainer/agent:2.19.0
"
`;

exports[`'buildWindowsStandaloneCommand' > should generate basic command with minimal configuration 1`] = `
"docker run -d \`
  --mount type=npipe,src=\\\\.\\pipe\\docker_engine,dst=\\\\.\\pipe\\docker_engine \`
  --mount type=bind,src=C:\\ProgramData\\docker\\volumes,dst=C:\\ProgramData\\docker\\volumes \`
  --mount type=volume,src=portainer_agent_data,dst=C:\\data \`
  --restart always \`
   -e EDGE=1 \`
  -e EDGE_ID=test-edge-id \`
  -e EDGE_KEY=test-edge-key \`
  -e EDGE_INSECURE_POLL=0 \`
  -e AGENT_SECRET=test-secret \`
  --name portainer_edge_agent \`
  portainer/agent:2.19.0
  "
`;

exports[`'buildWindowsStandaloneCommand' > should generate command with all meta variables 1`] = `
"docker run -d \`
  --mount type=npipe,src=\\\\.\\pipe\\docker_engine,dst=\\\\.\\pipe\\docker_engine \`
  --mount type=bind,src=C:\\ProgramData\\docker\\volumes,dst=C:\\ProgramData\\docker\\volumes \`
  --mount type=volume,src=portainer_agent_data,dst=C:\\data \`
  --restart always \`
   -e EDGE=1 \`
  -e EDGE_ID=test-edge-id \`
  -e EDGE_KEY=test-edge-key \`
  -e EDGE_INSECURE_POLL=0 \`
  -e AGENT_SECRET=test-secret \`
  -e EDGE_GROUPS=1:2 \`
  -e PORTAINER_GROUP=5 \`
  -e PORTAINER_TAGS=10:20 \`
  --name portainer_edge_agent \`
  portainer/agent:2.19.0
  "
`;

exports[`'buildWindowsStandaloneCommand' > should generate command with async mode enabled 1`] = `
"docker run -d \`
  --mount type=npipe,src=\\\\.\\pipe\\docker_engine,dst=\\\\.\\pipe\\docker_engine \`
  --mount type=bind,src=C:\\ProgramData\\docker\\volumes,dst=C:\\ProgramData\\docker\\volumes \`
  --mount type=volume,src=portainer_agent_data,dst=C:\\data \`
  --restart always \`
   -e EDGE=1 \`
  -e EDGE_ID=test-edge-id \`
  -e EDGE_KEY=test-edge-key \`
  -e EDGE_INSECURE_POLL=0 \`
  -e AGENT_SECRET=test-secret \`
  -e EDGE_ASYNC=1 \`
  --name portainer_edge_agent \`
  portainer/agent:2.19.0
  "
`;

exports[`'buildWindowsStandaloneCommand' > should generate command with custom environment variables 1`] = `
"docker run -d \`
  --mount type=npipe,src=\\\\.\\pipe\\docker_engine,dst=\\\\.\\pipe\\docker_engine \`
  --mount type=bind,src=C:\\ProgramData\\docker\\volumes,dst=C:\\ProgramData\\docker\\volumes \`
  --mount type=volume,src=portainer_agent_data,dst=C:\\data \`
  --restart always \`
   -e EDGE=1 \`
  -e EDGE_ID=test-edge-id \`
  -e EDGE_KEY=test-edge-key \`
  -e EDGE_INSECURE_POLL=0 \`
  -e AGENT_SECRET=test-secret \`
  -e MY_VAR=value1 \`
  -e ANOTHER_VAR=value2 \`
  --name portainer_edge_agent \`
  portainer/agent:2.19.0
  "
`;

exports[`'buildWindowsStandaloneCommand' > should generate command with edge ID generator 1`] = `
"$Env:PORTAINER_EDGE_ID = "@(Get-MachineGUID)" 

docker run -d \`
  --mount type=npipe,src=\\\\.\\pipe\\docker_engine,dst=\\\\.\\pipe\\docker_engine \`
  --mount type=bind,src=C:\\ProgramData\\docker\\volumes,dst=C:\\ProgramData\\docker\\volumes \`
  --mount type=volume,src=portainer_agent_data,dst=C:\\data \`
  --restart always \`
   -e EDGE=1 \`
  -e EDGE_ID=$Env:PORTAINER_EDGE_ID \`
  -e EDGE_KEY=test-edge-key \`
  -e EDGE_INSECURE_POLL=0 \`
  -e AGENT_SECRET=test-secret \`
  --name portainer_edge_agent \`
  portainer/agent:2.19.0
  "
`;

exports[`'buildWindowsStandaloneCommand' > should generate command with edge groups 1`] = `
"docker run -d \`
  --mount type=npipe,src=\\\\.\\pipe\\docker_engine,dst=\\\\.\\pipe\\docker_engine \`
  --mount type=bind,src=C:\\ProgramData\\docker\\volumes,dst=C:\\ProgramData\\docker\\volumes \`
  --mount type=volume,src=portainer_agent_data,dst=C:\\data \`
  --restart always \`
   -e EDGE=1 \`
  -e EDGE_ID=test-edge-id \`
  -e EDGE_KEY=test-edge-key \`
  -e EDGE_INSECURE_POLL=0 \`
  -e AGENT_SECRET=test-secret \`
  -e EDGE_GROUPS=1:2:3 \`
  --name portainer_edge_agent \`
  portainer/agent:2.19.0
  "
`;

exports[`'buildWindowsStandaloneCommand' > should generate command with empty agent secret 1`] = `
"docker run -d \`
  --mount type=npipe,src=\\\\.\\pipe\\docker_engine,dst=\\\\.\\pipe\\docker_engine \`
  --mount type=bind,src=C:\\ProgramData\\docker\\volumes,dst=C:\\ProgramData\\docker\\volumes \`
  --mount type=volume,src=portainer_agent_data,dst=C:\\data \`
  --restart always \`
   -e EDGE=1 \`
  -e EDGE_ID=test-edge-id \`
  -e EDGE_KEY=test-edge-key \`
  -e EDGE_INSECURE_POLL=0 \`
  --name portainer_edge_agent \`
  portainer/agent:2.19.0
  "
`;

exports[`'buildWindowsStandaloneCommand' > should generate command with portainer group 1`] = `
"docker run -d \`
  --mount type=npipe,src=\\\\.\\pipe\\docker_engine,dst=\\\\.\\pipe\\docker_engine \`
  --mount type=bind,src=C:\\ProgramData\\docker\\volumes,dst=C:\\ProgramData\\docker\\volumes \`
  --mount type=volume,src=portainer_agent_data,dst=C:\\data \`
  --restart always \`
   -e EDGE=1 \`
  -e EDGE_ID=test-edge-id \`
  -e EDGE_KEY=test-edge-key \`
  -e EDGE_INSECURE_POLL=0 \`
  -e AGENT_SECRET=test-secret \`
  -e PORTAINER_GROUP=5 \`
  --name portainer_edge_agent \`
  portainer/agent:2.19.0
  "
`;

exports[`'buildWindowsStandaloneCommand' > should generate command with self-signed certificates allowed 1`] = `
"docker run -d \`
  --mount type=npipe,src=\\\\.\\pipe\\docker_engine,dst=\\\\.\\pipe\\docker_engine \`
  --mount type=bind,src=C:\\ProgramData\\docker\\volumes,dst=C:\\ProgramData\\docker\\volumes \`
  --mount type=volume,src=portainer_agent_data,dst=C:\\data \`
  --restart always \`
   -e EDGE=1 \`
  -e EDGE_ID=test-edge-id \`
  -e EDGE_KEY=test-edge-key \`
  -e EDGE_INSECURE_POLL=1 \`
  -e AGENT_SECRET=test-secret \`
  --name portainer_edge_agent \`
  portainer/agent:2.19.0
  "
`;

exports[`'buildWindowsStandaloneCommand' > should generate command with tags 1`] = `
"docker run -d \`
  --mount type=npipe,src=\\\\.\\pipe\\docker_engine,dst=\\\\.\\pipe\\docker_engine \`
  --mount type=bind,src=C:\\ProgramData\\docker\\volumes,dst=C:\\ProgramData\\docker\\volumes \`
  --mount type=volume,src=portainer_agent_data,dst=C:\\data \`
  --restart always \`
   -e EDGE=1 \`
  -e EDGE_ID=test-edge-id \`
  -e EDGE_KEY=test-edge-key \`
  -e EDGE_INSECURE_POLL=0 \`
  -e AGENT_SECRET=test-secret \`
  -e PORTAINER_TAGS=10:20:30 \`
  --name portainer_edge_agent \`
  portainer/agent:2.19.0
  "
`;

exports[`'buildWindowsStandaloneCommand' > should generate command without agent secret 1`] = `
"docker run -d \`
  --mount type=npipe,src=\\\\.\\pipe\\docker_engine,dst=\\\\.\\pipe\\docker_engine \`
  --mount type=bind,src=C:\\ProgramData\\docker\\volumes,dst=C:\\ProgramData\\docker\\volumes \`
  --mount type=volume,src=portainer_agent_data,dst=C:\\data \`
  --restart always \`
   -e EDGE=1 \`
  -e EDGE_ID=test-edge-id \`
  -e EDGE_KEY=test-edge-key \`
  -e EDGE_INSECURE_POLL=0 \`
  --name portainer_edge_agent \`
  portainer/agent:2.19.0
  "
`;

exports[`'buildWindowsSwarmCommand' > should generate basic command with minimal configuration 1`] = `
"docker network create \`
  --driver overlay \`
  portainer_agent_network;

docker service create \`
  --name portainer_edge_agent \`
  --network portainer_agent_network \`
  -e EDGE=1 \`
  -e EDGE_ID=test-edge-id \`
  -e EDGE_KEY=test-edge-key \`
  -e EDGE_INSECURE_POLL=0 \`
  -e AGENT_SECRET=test-secret \`
  -e AGENT_CLUSTER_ADDR=tasks.portainer_edge_agent \`
  --mode global \`
  --constraint 'node.platform.os == windows' \`
  --mount type=npipe,src=\\\\.\\pipe\\docker_engine,dst=\\\\.\\pipe\\docker_engine \`
  --mount type=bind,src=C:\\ProgramData\\docker\\volumes,dst=C:\\ProgramData\\docker\\volumes \`
  --mount type=volume,src=portainer_agent_data,dst=C:\\data \`
  portainer/agent:2.19.0
"
`;

exports[`'buildWindowsSwarmCommand' > should generate command with all meta variables 1`] = `
"docker network create \`
  --driver overlay \`
  portainer_agent_network;

docker service create \`
  --name portainer_edge_agent \`
  --network portainer_agent_network \`
  -e EDGE=1 \`
  -e EDGE_ID=test-edge-id \`
  -e EDGE_KEY=test-edge-key \`
  -e EDGE_INSECURE_POLL=0 \`
  -e AGENT_SECRET=test-secret \`
  -e AGENT_CLUSTER_ADDR=tasks.portainer_edge_agent \`
  -e EDGE_GROUPS=1:2 \`
  -e PORTAINER_GROUP=5 \`
  -e PORTAINER_TAGS=10:20 \`
  --mode global \`
  --constraint 'node.platform.os == windows' \`
  --mount type=npipe,src=\\\\.\\pipe\\docker_engine,dst=\\\\.\\pipe\\docker_engine \`
  --mount type=bind,src=C:\\ProgramData\\docker\\volumes,dst=C:\\ProgramData\\docker\\volumes \`
  --mount type=volume,src=portainer_agent_data,dst=C:\\data \`
  portainer/agent:2.19.0
"
`;

exports[`'buildWindowsSwarmCommand' > should generate command with async mode enabled 1`] = `
"docker network create \`
  --driver overlay \`
  portainer_agent_network;

docker service create \`
  --name portainer_edge_agent \`
  --network portainer_agent_network \`
  -e EDGE=1 \`
  -e EDGE_ID=test-edge-id \`
  -e EDGE_KEY=test-edge-key \`
  -e EDGE_INSECURE_POLL=0 \`
  -e AGENT_SECRET=test-secret \`
  -e EDGE_ASYNC=1 \`
  -e AGENT_CLUSTER_ADDR=tasks.portainer_edge_agent \`
  --mode global \`
  --constraint 'node.platform.os == windows' \`
  --mount type=npipe,src=\\\\.\\pipe\\docker_engine,dst=\\\\.\\pipe\\docker_engine \`
  --mount type=bind,src=C:\\ProgramData\\docker\\volumes,dst=C:\\ProgramData\\docker\\volumes \`
  --mount type=volume,src=portainer_agent_data,dst=C:\\data \`
  portainer/agent:2.19.0
"
`;

exports[`'buildWindowsSwarmCommand' > should generate command with custom environment variables 1`] = `
"docker network create \`
  --driver overlay \`
  portainer_agent_network;

docker service create \`
  --name portainer_edge_agent \`
  --network portainer_agent_network \`
  -e EDGE=1 \`
  -e EDGE_ID=test-edge-id \`
  -e EDGE_KEY=test-edge-key \`
  -e EDGE_INSECURE_POLL=0 \`
  -e AGENT_SECRET=test-secret \`
  -e AGENT_CLUSTER_ADDR=tasks.portainer_edge_agent \`
  -e MY_VAR=value1 \`
  -e ANOTHER_VAR=value2 \`
  --mode global \`
  --constraint 'node.platform.os == windows' \`
  --mount type=npipe,src=\\\\.\\pipe\\docker_engine,dst=\\\\.\\pipe\\docker_engine \`
  --mount type=bind,src=C:\\ProgramData\\docker\\volumes,dst=C:\\ProgramData\\docker\\volumes \`
  --mount type=volume,src=portainer_agent_data,dst=C:\\data \`
  portainer/agent:2.19.0
"
`;

exports[`'buildWindowsSwarmCommand' > should generate command with edge ID generator 1`] = `
"$Env:PORTAINER_EDGE_ID = "@(Get-MachineGUID)" 

docker network create \`
  --driver overlay \`
  portainer_agent_network;

docker service create \`
  --name portainer_edge_agent \`
  --network portainer_agent_network \`
  -e EDGE=1 \`
  -e EDGE_ID=$Env:PORTAINER_EDGE_ID \`
  -e EDGE_KEY=test-edge-key \`
  -e EDGE_INSECURE_POLL=0 \`
  -e AGENT_SECRET=test-secret \`
  -e AGENT_CLUSTER_ADDR=tasks.portainer_edge_agent \`
  --mode global \`
  --constraint 'node.platform.os == windows' \`
  --mount type=npipe,src=\\\\.\\pipe\\docker_engine,dst=\\\\.\\pipe\\docker_engine \`
  --mount type=bind,src=C:\\ProgramData\\docker\\volumes,dst=C:\\ProgramData\\docker\\volumes \`
  --mount type=volume,src=portainer_agent_data,dst=C:\\data \`
  portainer/agent:2.19.0
"
`;

exports[`'buildWindowsSwarmCommand' > should generate command with edge groups 1`] = `
"docker network create \`
  --driver overlay \`
  portainer_agent_network;

docker service create \`
  --name portainer_edge_agent \`
  --network portainer_agent_network \`
  -e EDGE=1 \`
  -e EDGE_ID=test-edge-id \`
  -e EDGE_KEY=test-edge-key \`
  -e EDGE_INSECURE_POLL=0 \`
  -e AGENT_SECRET=test-secret \`
  -e AGENT_CLUSTER_ADDR=tasks.portainer_edge_agent \`
  -e EDGE_GROUPS=1:2:3 \`
  --mode global \`
  --constraint 'node.platform.os == windows' \`
  --mount type=npipe,src=\\\\.\\pipe\\docker_engine,dst=\\\\.\\pipe\\docker_engine \`
  --mount type=bind,src=C:\\ProgramData\\docker\\volumes,dst=C:\\ProgramData\\docker\\volumes \`
  --mount type=volume,src=portainer_agent_data,dst=C:\\data \`
  portainer/agent:2.19.0
"
`;

exports[`'buildWindowsSwarmCommand' > should generate command with empty agent secret 1`] = `
"docker network create \`
  --driver overlay \`
  portainer_agent_network;

docker service create \`
  --name portainer_edge_agent \`
  --network portainer_agent_network \`
  -e EDGE=1 \`
  -e EDGE_ID=test-edge-id \`
  -e EDGE_KEY=test-edge-key \`
  -e EDGE_INSECURE_POLL=0 \`
  -e AGENT_CLUSTER_ADDR=tasks.portainer_edge_agent \`
  --mode global \`
  --constraint 'node.platform.os == windows' \`
  --mount type=npipe,src=\\\\.\\pipe\\docker_engine,dst=\\\\.\\pipe\\docker_engine \`
  --mount type=bind,src=C:\\ProgramData\\docker\\volumes,dst=C:\\ProgramData\\docker\\volumes \`
  --mount type=volume,src=portainer_agent_data,dst=C:\\data \`
  portainer/agent:2.19.0
"
`;

exports[`'buildWindowsSwarmCommand' > should generate command with portainer group 1`] = `
"docker network create \`
  --driver overlay \`
  portainer_agent_network;

docker service create \`
  --name portainer_edge_agent \`
  --network portainer_agent_network \`
  -e EDGE=1 \`
  -e EDGE_ID=test-edge-id \`
  -e EDGE_KEY=test-edge-key \`
  -e EDGE_INSECURE_POLL=0 \`
  -e AGENT_SECRET=test-secret \`
  -e AGENT_CLUSTER_ADDR=tasks.portainer_edge_agent \`
  -e PORTAINER_GROUP=5 \`
  --mode global \`
  --constraint 'node.platform.os == windows' \`
  --mount type=npipe,src=\\\\.\\pipe\\docker_engine,dst=\\\\.\\pipe\\docker_engine \`
  --mount type=bind,src=C:\\ProgramData\\docker\\volumes,dst=C:\\ProgramData\\docker\\volumes \`
  --mount type=volume,src=portainer_agent_data,dst=C:\\data \`
  portainer/agent:2.19.0
"
`;

exports[`'buildWindowsSwarmCommand' > should generate command with self-signed certificates allowed 1`] = `
"docker network create \`
  --driver overlay \`
  portainer_agent_network;

docker service create \`
  --name portainer_edge_agent \`
  --network portainer_agent_network \`
  -e EDGE=1 \`
  -e EDGE_ID=test-edge-id \`
  -e EDGE_KEY=test-edge-key \`
  -e EDGE_INSECURE_POLL=1 \`
  -e AGENT_SECRET=test-secret \`
  -e AGENT_CLUSTER_ADDR=tasks.portainer_edge_agent \`
  --mode global \`
  --constraint 'node.platform.os == windows' \`
  --mount type=npipe,src=\\\\.\\pipe\\docker_engine,dst=\\\\.\\pipe\\docker_engine \`
  --mount type=bind,src=C:\\ProgramData\\docker\\volumes,dst=C:\\ProgramData\\docker\\volumes \`
  --mount type=volume,src=portainer_agent_data,dst=C:\\data \`
  portainer/agent:2.19.0
"
`;

exports[`'buildWindowsSwarmCommand' > should generate command with tags 1`] = `
"docker network create \`
  --driver overlay \`
  portainer_agent_network;

docker service create \`
  --name portainer_edge_agent \`
  --network portainer_agent_network \`
  -e EDGE=1 \`
  -e EDGE_ID=test-edge-id \`
  -e EDGE_KEY=test-edge-key \`
  -e EDGE_INSECURE_POLL=0 \`
  -e AGENT_SECRET=test-secret \`
  -e AGENT_CLUSTER_ADDR=tasks.portainer_edge_agent \`
  -e PORTAINER_TAGS=10:20:30 \`
  --mode global \`
  --constraint 'node.platform.os == windows' \`
  --mount type=npipe,src=\\\\.\\pipe\\docker_engine,dst=\\\\.\\pipe\\docker_engine \`
  --mount type=bind,src=C:\\ProgramData\\docker\\volumes,dst=C:\\ProgramData\\docker\\volumes \`
  --mount type=volume,src=portainer_agent_data,dst=C:\\data \`
  portainer/agent:2.19.0
"
`;

exports[`'buildWindowsSwarmCommand' > should generate command without agent secret 1`] = `
"docker network create \`
  --driver overlay \`
  portainer_agent_network;

docker service create \`
  --name portainer_edge_agent \`
  --network portainer_agent_network \`
  -e EDGE=1 \`
  -e EDGE_ID=test-edge-id \`
  -e EDGE_KEY=test-edge-key \`
  -e EDGE_INSECURE_POLL=0 \`
  -e AGENT_CLUSTER_ADDR=tasks.portainer_edge_agent \`
  --mode global \`
  --constraint 'node.platform.os == windows' \`
  --mount type=npipe,src=\\\\.\\pipe\\docker_engine,dst=\\\\.\\pipe\\docker_engine \`
  --mount type=bind,src=C:\\ProgramData\\docker\\volumes,dst=C:\\ProgramData\\docker\\volumes \`
  --mount type=volume,src=portainer_agent_data,dst=C:\\data \`
  portainer/agent:2.19.0
"
`;
